Type inference seems to be working
- only proper transpilation for generics (polytypes) left